chore: ini refactor turbo
Pull Request: https://github.com/LightDotSo/LightDotSo/pull/57

--- a/crates/turbo.json
+++ b/crates/turbo.json
@@ -8,6 +8,7 @@
         "**",
         "../.cargo/**",
         "../crates/**",
+        "../.clippy.toml",
         "../Cargo.lock",
         "../Cargo.toml",
         "../rust-toolchain.toml",
