--- a/ios/LightWallet.xcodeproj/xcshareddata/xcschemes/LightWalletTests.xcscheme
+++ b/ios/LightWallet.xcodeproj/xcshareddata/xcschemes/LightWalletTests.xcscheme
@@ -10,7 +10,9 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      localizableStringsDataGatheringEnabled = "YES">
       <Testables>
          <TestableReference
             skipped = "NO"
