--- a/android/turbo.json
+++ b/android/turbo.json
@@ -4,6 +4,7 @@
   "pipeline": {
     "build": {
       "cache": false,
+      "dependsOn": ["^build"],
       "inputs": [
         "../gradle/**",
         "../build.gradle",
