chore:  xcode codecov (#60)
* chore: update

* chore: update

* chore: update

* chore: ini scan

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* Update ios.yml

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -29,19 +29,8 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
-      - name: Set up Homebrew
-        uses: Homebrew/actions/setup-homebrew@master
-      - name: Cache Homebrew packages
-        uses: actions/cache@v2
-        with:
-          path: /home/linuxbrew/.linuxbrew/Homebrew/Library/Homebrew/vendor
-          key: ${{ runner.os }}-brew-${{ hashFiles('**/Brewfile.lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-brew-
-      - name: Install Homebrew dependencies
-        run: |
-          brew update
-          brew bundle --file=./Brewfile
+      - name: Brew Install
+        uses: wallet-rs/wallet-rs/.github/actions/brew-install@main
       - name: Run swiftlint
         run: |
           swiftlint
@@ -54,6 +43,8 @@ jobs:
       - ios-turbo
     runs-on: macos-latest
     timeout-minutes: 90
+    permissions:
+      checks: write
     env:
       RUSTFLAGS: -D warnings
       CARGO_TERM_COLOR: always
@@ -97,6 +88,18 @@ jobs:
           DEVELOPER_APP_IDENTIFIER: ${{ secrets.DEVELOPER_APP_IDENTIFIER }}
           PROVISIONING_PROFILE_SPECIFIER: ${{ secrets.PROVISIONING_PROFILE_SPECIFIER }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+      - name: Upload Test Results
+        uses: kishikawakatsumi/xcresulttool@v1
+        with:
+          path: |
+            fastlane/test_output/LightWalletTests.xcresult
+            fastlane/test_output/LightWalletUITests.xcresult
+          show-passed-tests: false
+      - name: Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
       - if: github.event_name == 'pull_request'
         uses: mobile-dev-inc/action-maestro-cloud@main
         continue-on-error: true
