--- a/foundry.toml
+++ b/foundry.toml
@@ -10,7 +10,8 @@ libs = [
   "lib/openzeppelin-contracts-upgradeable",
   "lib/safe-contracts",
   "lib/solady",
-  "lib/solmate"
+  "lib/solmate",
+  "lib/v3-periphery"
 ]
 solc = "0.8.18"
 
