--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,19 @@
 [profile.default]
 src = "contracts/src"
 test= "contracts/test"
-solc = "0.8.13"
+libs = [
+  "lib/account-abstraction",
+  "lib/ds-test",
+  "lib/forge-std",
+  "lib/kernel",
+  "lib/openzeppelin-contracts",
+  "lib/openzeppelin-contracts-upgradeable",
+  "lib/safe-contracts",
+  "lib/solady",
+  "lib/solmate",
+  "lib/v3-periphery"
+]
+solc = "0.8.18"
 
 [profile.local]
 no_match_test = "testForkRun"
