feat: ini account implementation

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -128,6 +128,35 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: lcov.info
           fail_ci_if_error: false
+  contracts-scopelint:
+    if: needs.contracts-turbo.outputs.trigger == 'true'
+    needs:
+      - contracts-turbo
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - name: Install Scopelint
+        uses: engineerd/configurator@v0.0.8
+        with:
+          name: scopelint
+          repo: ScopeLift/scopelint
+          fromGitHubReleases: true
+          version: latest
+          pathInArchive: scopelint-x86_64-linux/scopelint
+          urlTemplate: https://github.com/ScopeLift/scopelint/releases/download/{{version}}/scopelint-x86_64-linux.tar.xz
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Scopelint Check
+        working-directory: contracts
+        run: |
+          scopelint check
   contracts-check:
     if: always()
     needs:
@@ -135,6 +164,7 @@ jobs:
       - contracts-lint
       - contracts-storage
       - contracts-test
+      - contracts-scopelint
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
