--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,4 +1,5 @@
 [alias]
+scopelint = ["run", "--package", "embedded-scopelint", "--"]
 uniffi-bindgen = ["run", "--package", "embedded-uniffi-bindgen", "--"]
 
 [target.x86_64-apple-darwin]
