--- a/foundry.toml
+++ b/foundry.toml
@@ -11,9 +11,16 @@
     "lib/solmate",
     "lib/v3-periphery",
   ]
+  optimizer = true
+  optimizer_runs = 10_000_000
   solc = "0.8.18"
   src = "contracts/src"
   test = "contracts/test"
+  verbosity = 3
 
 [profile.local]
   no_match_test = "testForkRun"
+
+[profile.ci]
+  fuzz = { runs = 5000 }
+  invariant = { runs = 1000 }
