--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -167,5 +167,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test
+          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-slither
           jobs: ${{ toJSON(needs) }}
