chore: ini soul wallet

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "lib/v3-core"]
 	path = lib/v3-core
 	url = https://github.com/Uniswap/v3-core
+[submodule "lib/soul-wallet-contract"]
+	path = lib/soul-wallet-contract
+	url = https://github.com/proofofsoulprotocol/soul-wallet-contract
