--- a/foundry.toml
+++ b/foundry.toml
@@ -3,20 +3,22 @@
     "lib/account-abstraction",
     "lib/ds-test",
     "lib/forge-std",
-    "lib/kernel",
+    # "lib/kernel",
     "lib/openzeppelin-contracts",
     "lib/openzeppelin-contracts-upgradeable",
     "lib/safe-contracts",
     "lib/solady",
     "lib/solmate",
+    # "lib/soul-wallet-contract",
     "lib/v3-periphery",
   ]
   optimizer = true
-  optimizer_runs = 10_000_000
+  optimizer_runs = 10_000
   solc = "0.8.18"
   src = "contracts/src"
   test = "contracts/test"
   verbosity = 3
+  via_ir = false
 
 [profile.local]
   no_match_test = "testForkRun"
