--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -8,6 +8,8 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
+env:
+  FOUNDRY_PROFILE: ci
 jobs:
   contracts-turbo:
     runs-on: ubuntu-latest
