--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
+    "@nomicfoundation/hardhat-foundry": "^1.0.2",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@release-it/keep-a-changelog": "^3.1.0",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
@@ -46,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.14",
+    "chai": "^4.3.7",
     "commitlint": "^17.6.6",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
@@ -66,6 +70,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "3.10.1",
     "git-cz": "^4.9.0",
+    "hardhat": "^2.16.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "npm-package-json-lint": "^6.4.0",
