--- a/contracts/turbo.json
+++ b/contracts/turbo.json
@@ -4,10 +4,13 @@
   "pipeline": {
     "build": {
       "cache": false,
-      "inputs": ["src/**", "test/**", "../lib/**", "../.gitmodules", "../foundry.toml", "../remappings.txt"],
+      "inputs": ["src/**", "test/**", "../lib/**", "../.gitmodules", "../hardhat.config.js", "../foundry.toml", "../remappings.txt"],
       "outputs": ["../out", "../.gas-snapshot", "../foundry.toml"]
     },
     "lint": {
+      "dependsOn": ["build"]
+    },
+    "test": {
       "dependsOn": ["build"]
     }
   }
