--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules
 .pnp.js
 
 # testing
+artifacts
 coverage
 lcov.info
 
@@ -53,6 +54,7 @@ target/
 
 # foundry related
 cache
+cache_hardhat
 
 # Logs
 logs
