--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,7 +27,7 @@
     "sourceMap": false,
     "strictNullChecks": true,
     "target": "es2020",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "lib": ["dom", "esnext"]
   },
   "exclude": ["_"],
