--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -150,7 +150,7 @@ jobs:
           version: nightly
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Node Lint
+      - name: Hardhat Test
         run: |
           pnpm turbo run test-hh
   contracts-slither:
