--- a/contracts/turbo.json
+++ b/contracts/turbo.json
@@ -4,7 +4,7 @@
   "pipeline": {
     "build": {
       "cache": false,
-      "inputs": ["src/**", "test/**", "../lib/**", "../.gitmodules", "../hardhat.config.js", "../foundry.toml", "../remappings.txt"],
+      "inputs": ["src/**", "test/**", "../lib/**", "../.gitmodules", "../hardhat.config.ts", "../foundry.toml", "../remappings.txt"],
       "outputs": ["../out", "../.gas-snapshot", "../foundry.toml"]
     },
     "lint": {
