--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -8,6 +8,8 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
+env:
+  FOUNDRY_PROFILE: ci
 jobs:
   contracts-turbo:
     runs-on: ubuntu-latest
@@ -128,6 +130,29 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: lcov.info
           fail_ci_if_error: false
+  contracts-hardhat:
+    if: needs.contracts-turbo.outputs.trigger == 'true'
+    needs:
+      - contracts-turbo
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
+    env:
+      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - name: Node Install
+        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
+      - name: Hardhat Test
+        run: |
+          pnpm turbo run test-hh
   contracts-slither:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
@@ -160,6 +185,7 @@ jobs:
       - contracts-lint
       - contracts-storage
       - contracts-test
+      - contracts-hardhat
       - contracts-slither
     runs-on: ubuntu-latest
     timeout-minutes: 3
@@ -167,5 +193,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-slither
+          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-hardhat,contracts-slither
           jobs: ${{ toJSON(needs) }}
