--- a/contracts/package.json
+++ b/contracts/package.json
@@ -13,7 +13,11 @@
   "license": "GPL-3.0",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "echo 'Empty build script for turborepo trigger'",
-    "lint": "cd .. && pnpm solhint 'contracts/**/*.sol'"
+    "compile": "cd .. && hardhat compile",
+    "lint": "cd .. && pnpm solhint 'contracts/**/*.sol'",
+    "test-hh": "cd .. && hardhat test"
+  },
+  "dependencies": {
+    "ethers": "^6.6.2"
   }
 }
