--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -3,7 +3,7 @@ name = "lightwallet-core"
 version = "0.1.0"
 edition = "2021"
 
-license = "MPL-2.0"
+license = "GPL-3.0"
 
 [lib]
 name = "uniffi_lightwallet_core"
