--- a/crates/keychain/Cargo.toml
+++ b/crates/keychain/Cargo.toml
@@ -3,7 +3,7 @@ name = "lightwallet-keychain"
 version = "0.1.0"
 edition = "2021"
 
-license = "MPL-2.0"
+license = "GPL-3.0"
 
 [dependencies]
 core-foundation = "0.9.3"
