--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,6 +51,9 @@ jobs:
       - rust-turbo
     runs-on: ${{ matrix.os }}
     timeout-minutes: 90
+    permissions:
+      contents: read
+      security-events: write
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
