--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -75,6 +75,9 @@ jobs:
         with:
           command: build
           args: --target ${{ matrix.target }}
+      - name: Deny Check
+        run: |
+          cargo deny check
       - if: matrix.test
         name: Rust Test
         uses: actions-rs/cargo@v1
