chore: ini rust clippy sarif action (#75)
* chore: ini rust clippy sarif action

* chore: update

* chore: update

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,6 +51,9 @@ jobs:
       - rust-turbo
     runs-on: ${{ matrix.os }}
     timeout-minutes: 90
+    permissions:
+      contents: read
+      security-events: write
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -95,11 +98,16 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: lcov.info
           fail_ci_if_error: false
-      - name: Rust Clippy Check
-        uses: actions-rs/cargo@v1
+      - name: Run Clippy
+        run: |
+          cargo clippy \
+            --all-features \
+            --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+        continue-on-error: true
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v2
         with:
-          command: clippy
-          args: -- -D warnings
+          sarif_file: rust-clippy-results.sarif
       - name: Rust Finish
         uses: wallet-rs/wallet-rs/.github/actions/rust-finish@main
   rust-check:
