--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -5,6 +5,8 @@ on:
       - main
   pull_request:
   merge_group:
+  release:
+    types: created
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -26,7 +28,7 @@ jobs:
         with:
           workspace: "@lightdotso/fastlane"
   fastlane-android:
-    if: needs.fastlane-turbo.outputs.trigger == 'true'
+    if: needs.fastlane-turbo.outputs.trigger == 'true' || startsWith(github.ref, 'refs/tags/v')
     needs:
       - fastlane-turbo
     runs-on: ubuntu-latest
@@ -68,7 +70,7 @@ jobs:
         env:
           GH_NUMBER: ${{ github.event.pull_request.number }}
   fastlane-ios:
-    if: needs.fastlane-turbo.outputs.trigger == 'true'
+    if: needs.fastlane-turbo.outputs.trigger == 'true' || startsWith(github.ref, 'refs/tags/v')
     needs:
       - fastlane-turbo
     runs-on: macos-latest
