--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,10 +26,14 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 90
     steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/metadata-action@v4
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Docker Qemu Setup
+        uses: docker/setup-qemu-action@v2
+      - name: Docker Buildx Setup
+        uses: docker/setup-buildx-action@v2
+      - name: Docker Metadata
+        uses: docker/metadata-action@v4
         id: meta
         with:
           images: |
@@ -43,12 +47,14 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
-      - uses: docker/login-action@v1
+      - name: Docker Login
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.BOT_TOKEN }}
-      - uses: docker/build-push-action@v2
+      - name: Docker Build
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
