--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -13,6 +13,7 @@ concurrency:
 jobs:
   kubernetes:
     runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
