--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,9 @@ jobs:
           workspace: "@lightdotso/crates"
   docker:
     runs-on: ubuntu-latest
+    if: needs.docker-turbo.outputs.trigger == 'true'
+    needs:
+      - docker-turbo
     timeout-minutes: 90
     steps:
       - name: Fetch Head
@@ -71,5 +74,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: rust
+          allowed-skips: docker
           jobs: ${{ toJSON(needs) }}
