--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -27,3 +27,14 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: kube-linter.sarif
+  k8s-check:
+    if: always()
+    needs:
+      - k8s-lint
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    steps:
+      - name: Check All Green
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
