--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -11,9 +11,23 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 jobs:
+  k8s-docker-wait:
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
+    steps:
+      - name: Wait for docker to build
+        uses: lewagon/wait-on-check-action@master
+        with:
+          ref: ${{ github.ref }}
+          check-name: docker-check
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
   k8s-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    permissions:
+      contents: read
+      security-events: write
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -30,6 +44,7 @@ jobs:
   k8s-check:
     if: always()
     needs:
+      - k8s-docker-wait
       - k8s-lint
     runs-on: ubuntu-latest
     timeout-minutes: 3
