--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -76,5 +76,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: docker
+          allowed-skips: docker-build
           jobs: ${{ toJSON(needs) }}
