--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -19,10 +19,10 @@ jobs:
         uses: lewagon/wait-on-check-action@v1.3.1
         with:
           ref: ${{ github.ref }}
-          check-name: docker-build
+          check-name: docker-check
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
-          allowed-conclusions: success,skipped
+          allowed-conclusions: success
   k8s-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 90
