--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -1,6 +1,10 @@
 name: Kubernetes
 on:
-  workflow_dispatch:
+  workflow_run:
+    workflows:
+      - docker
+    types:
+      - completed
 jobs:
   k8s-lint:
     runs-on: ubuntu-latest
