--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -16,12 +16,12 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: set image deployment serve serve=ghcr.io/lightdotso/lightdotso:main
+          args: set image deployment/serve serve=ghcr.io/lightdotso/lightdotso:main
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: rollout status service
+          args: rollout status deployment/serve
   k8s-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 90
