--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -1,10 +1,15 @@
 name: Kubernetes
 on:
-  workflow_run:
-    workflows:
-      - Docker
-    types:
-      - completed
+  push:
+    branches:
+      - main
+  pull_request:
+  merge_group:
+  release:
+    types: created
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 jobs:
   k8s-deploy-serve:
     runs-on: ubuntu-latest
