--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -19,7 +19,7 @@ jobs:
         uses: lewagon/wait-on-check-action@v1.3.1
         with:
           ref: ${{ github.ref }}
-          check-name: docker-turbo
+          check-name: Docker / docker-turbo
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
           allowed-conclusions: success,skipped
