chore: ini deploy serve (#90)
* chore: ini deploy serve

* chore: update

* chore: update

* Update k8s.yml

* Update k8s.yml

* Update k8s.yml

* Update k8s.yml

* Update k8s.yml

* Update k8s.yml

* Update k8s.yml

* Update k8s.yml

* Update k8s.yml

--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -1,22 +1,50 @@
 name: Kubernetes
 on:
-  workflow_run:
-    workflows:
-      - Docker
-    types:
-      - completed
+  push:
+    branches:
+      - main
+  pull_request:
+  merge_group:
+  release:
+    types: created
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 jobs:
-  k8s-dev:
+  k8s-wait-docker:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Wait Docker
+        uses: lewagon/wait-on-check-action@v1.3.1
+        with:
+          ref: ${{ github.ref }}
+          running-workflow-name: Docker
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
+          allowed-conclusions: success,skipped
+  k8s-deploy-serve:
+    runs-on: ubuntu-latest
+    needs:
+      - k8s-wait-docker
     timeout-minutes: 90
     steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: get pods
+          args: set image deployment/serve serve=ghcr.io/lightdotso/lightdotso:main
+      - uses: actions-hub/kubectl@master
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+        with:
+          args: rollout status deployment/serve
   k8s-lint:
     runs-on: ubuntu-latest
+    needs:
+      - k8s-wait-docker
     timeout-minutes: 90
     permissions:
       contents: read
