--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -22,7 +22,7 @@ jobs:
           running-workflow-name: docker-check
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
-          allowed-conclusions: success,skipped
+          allowed-conclusions: success
   k8s-deploy-serve:
     runs-on: ubuntu-latest
     needs:
